Fx postgres dialect bugs